--- a/website/index.html
+++ b/website/index.html
@@ -903,7 +903,7 @@
                         <img src="https://images.unsplash.com/photo-1467232004584-a241de8bcf5d?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Task Management App">
                     </div>
                     <div class="project-info">
-                        <h3>Api Based Weatehr App</h3>
+                        <h3>Api Based Weather App</h3>
                         <div class="team-contributors">Pransu , Gautam</div>
                         <p>Collaborative task management solution with real-time updates and team workspaces.</p>
                         <div class="project-links">
