--- a/website/index.html
+++ b/website/index.html
@@ -703,7 +703,7 @@
                 <div class="member-card">
                     <div class="member-img">
                         <!-- <img src="https://images.unsplash.com/photo-1500648767791-00dcc994a43e?ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80" alt="David Chen"> -->
-                        <img src="guhu.png">
+                        <img src="guhu2.png">
                     </div>
                     <div class="member-info">
                         <h3>Gautam Sharma </h3>
